--- a/_macros.qmd
+++ b/_macros.qmd
@@ -36,4 +36,7 @@
 
 \newcommand{\Rsqr}{R^2_r}
 \newcommand{\Rsqnr}{R^2_{nr}}
-\newcommand{\ubar}[1]{\underaccent{\bar}{#1}}
+\newcommand{\bm}[1]{\boldsymbol{#1}}
+\newcommand{\stext}[1]{\text{\ #1}}
+
+\newcommand{\adistr}{\stackrel{\mathclap[\scriptstyle]{\mathrm{a}}}{\sim}}
